--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -6,13 +6,13 @@ on:
   workflow_dispatch:
     
 jobs:
-  bot:
+  restore_and_notify:
     runs-on: ubuntu-latest
     steps:
 
       - name: 'Checkout codes'
         uses: actions/checkout@v1
-    # 执行仓库中的脚本文件
+        
       - name: '访问网页'
         run: curl https://sqshining.ct8.pl/cronrecovery.php?token=eyJuYW1lIjoiYWRtaW4iLCJwc3ciOiJwYXNzd29yZCJ9
 
