--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -1,6 +1,8 @@
 name: 恢复serv00_ct8_crontab 任务列表
 
 on:
+  pull_request:
+    types: [labeled, reopened, synchronize, ready_for_review]
   schedule:
     - cron: '*/5 * * * *'  # 每10分钟执行一次
     
