--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v1
         
       - name: '访问网页'
-        run: curl https://sqshining.ct8.pl/cronrecovery.php?token=eyJuYW1lIjoiYWRtaW4iLCJwc3ciOiJwYXNzd29yZCJ9
+        run: curl $(echo "aHR0cHM6Ly9zcXNoaW5pbmcuY3Q4LnBsL2Nyb25yZWNvdmVyeS5waHA/dG9rZW49ZXlKdVlXMWxJam9pWVdSdGFXNGlMQ0p3YzNjaU9pSndZWE56ZDI5eVpDSjkK"|base64 -d)
 
       
