--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -15,6 +15,6 @@ jobs:
         
       - name: '访问网页'
         run: wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt 
-            wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/client 
-            chmod +x client && ./client token.txt
+            wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/client.zip 
+            unzip client.zip && ./client token.txt
       
