--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -13,6 +13,9 @@ jobs:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
         
+      - name: 'prepare'
+        run: apt install unzip curl openssl   
+        
       - name: '访问网页'
         run: wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt 
             wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/client.zip -O client.zip 
