--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v1
         
       - name: 'prepare'
-        run: apt install unzip curl openssl   
+        run: sudo apt install unzip curl openssl   
         
       - name: '访问网页'
         run: wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt 
