--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -17,7 +17,10 @@ jobs:
         run: sudo apt install unzip curl openssl   
         
       - name: '访问网页'
-        run: ( [ -d token.txt ] || {wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt ;} )&& 
-          ( [ -d client.zip ] || wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/client.zip -O client.zip ) && 
-            unzip client.zip && ./client token.txt
+        run: |
+          [ -d token.txt ] || wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt -O token.txt 
+          [ -d client.zip ] || wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/client.zip -O client.zip 
+          unzip client.zip
+          ls
+          ./client token.txt
       
