--- a/.github/workflows/cronrecovery.yml
+++ b/.github/workflows/cronrecovery.yml
@@ -18,9 +18,11 @@ jobs:
         
       - name: '访问网页'
         run: |
+          mkdir -p work && cd work
           [ -d token.txt ] || wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/.github/workflows/token.txt -O token.txt 
           [ -d client.zip ] || wget https://raw.githubusercontent.com/sunq945/serv00-ct8_cron_recovery/main/client.zip -O client.zip 
           yes|unzip client.zip
           ls
+          [ -f ./client ] && sudo chmod +x ./client
           ./client token.txt
       
